k8s/apps/compression-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: compression-policy
  namespace: dylanmtaylor
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: dylanmtaylor-routes
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: apps-routes
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: files-routes
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: fwc-routes
  compression:
  - type: Gzip
  timeout:
    http:
      requestTimeout: 30s
      connectionIdleTimeout: 5m
